src/objects/Channel__c.object
<CustomObject>
    <fields>
        <fullName>Certificate_ID__c</fullName>
        <description>The ID of the tax exempt certificate</description>
        <label>Certificate ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indirect_Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag to set whether or not the Indirect Warning message is displayed when the channel is selected on a new quote.</description>
        <label>Indirect Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag for whether or not this channel is tax exempt</description>
        <label>Tax Exempt Status</label>
        <type>Checkbox</type>
    </fields>
    <label>Channel</label>
    <nameField>
        <label>Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>